# chess-move-tracking

./: .gitignore  LICENSE  README.md  board_perception.py  chessboard.py  chesspeices.py  chesspieces.py  logger.py  main.py  ocr_orientation.py  processing.py  pyproject.toml
results/: output.csv
runs/detect/train/: args.yaml  events.out.tfevents.1764499254.42210dde8b5b.1715.0  results.csv
scripts/: download_chess-pieces.sh  download_video_labelled.sh  download_videos.sh  download_xcorners.sh  format.sh  train.sh
