[project]
name = "chess-comp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.217",
    "python-chess>=1.999",
    "albumentations>=2.0.8",
    "gdown",
    "tensorboard",
    "lap>=0.5.12",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]
